--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://cddefc27-8dd4-44f2-a418-6d8cdcbd7414.preview.emergentagent.com
 WDS_SOCKET_PORT=443
